Add the classpath, jar , module